<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:title="" />
        <item
            android:title="" />
        <item
            android:title="" />
        <item
            android:title="" />
        <item
            android:id="@+id/nav_add_edit_pet"
            android:icon="@drawable/ic_add"
            android:title="@string/nav_add_pet"/>
    </group>

    <item android:title="Booking Management">
        <menu>
<!--            <group android:checkableBehavior="single">-->
                <item
                    android:id="@+id/nav_booking_history"
                    android:icon="@drawable/ic_history"
                    android:title="@string/nav_booking_history" />

<!--            </group>-->
        </menu>
    </item>
    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_log_out" />
        </menu>
    </item>

</menu>