<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="tuan.aprotrain.projectpetcare.Fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_booking_history"
        android:name="tuan.aprotrain.projectpetcare.Fragment.booking_history.BookingHistoryFragment"
        android:label="@string/nav_booking_history"
        tools:layout="@layout/fragment_booking_history" />
    <fragment
        android:id="@+id/nav_breeding"
        android:name="tuan.aprotrain.projectpetcare.Fragment.breeding.BreedingFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_breeding" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="tuan.aprotrain.projectpetcare.Fragment.about_us.AboutUsFragment"
        android:label="About Us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="tuan.aprotrain.projectpetcare.Fragment.gallery.GalleryFragment"
        android:label="Gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_add_edit_pet"
        android:name="tuan.aprotrain.projectpetcare.Fragment.addEditPet.addEditFragment"
        android:label="Add Edit Pet"
        tools:layout="@layout/fragment_add_edit" />
</navigation>